Apply grayscale on HTML element to prevent shift in position.

--- a/src/toolbar/css/a11y.css
+++ b/src/toolbar/css/a11y.css
@@ -129,6 +129,10 @@
 	border-radius: 0 0 0 4px;
 }
 
+html {
+	will-change: filter;
+}
+
 .desaturated {
 	filter: grayscale(1) !important;
 }
